# roma

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
roma/: __init__.py
roma/art/: __init__.py  commander.py  easel.py  frame.py  shortcuts.py  tipbox.py
roma/art/tkutils/: __init__.py  misc.py  simple_dialogs.py
roma/ideology/: __init__.py  noear.py
roma/mercurius/: __init__.py  hall.py  io.py
roma/spqr/: __init__.py  arguments.py  atticus.py  censor.py  finder.py  table.py  threading.py  wizard.py
roma/via/: __init__.py  city.py
